--- a/TestExcel/Views/Data/Branch.cshtml
+++ b/TestExcel/Views/Data/Branch.cshtml
@@ -7,7 +7,7 @@
     <h2>Branch</h2>
     <br>
     <div class="w3-row w3-center fontup">
-        @Html.ActionLink("แก้ไขข้อมูล", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
+        <a href="@Url.Action("Section")" style="color:blue;font-size:20px">คณะ/สาขา</a>
     </div>
 
     <div class="container">
