--- a/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
+++ b/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
@@ -20,9 +20,10 @@
     <div class="container body-content w3-margin-top">
         <div class="w3-row w3-center fontup">
             <a href="@Url.Action("Index","TimeSchedule")" style="color:blue;font-size:20px">คณะ/สาขา</a> |
-            <a href="@Url.Action("ClSchedule","TimeSchedule")" style="color:blue;font-size:20px">อาคาร/ห้องเรียน</a> |
             <a href="@Url.Action("Section","Data")" style="color:blue;font-size:20px">แก้ไขข้อมูล</a> |
-            @*@Html.ActionLink("ครูผู้สอน", "TeSchedule", "TimeSchedule", new { style = "color:blue;font-size:20px" })  |*@
+            @*
+        <a href="@Url.Action("ClSchedule","TimeSchedule")" style="color:blue;font-size:20px">อาคาร/ห้องเรียน</a> |
+        @Html.ActionLink("ครูผู้สอน", "TeSchedule", "TimeSchedule", new { style = "color:blue;font-size:20px" })  |*@
         </div>
         @RenderBody()
         <hr />
